Chromium scrollbars display fix.

--- a/styles/cheloniangall.css
+++ b/styles/cheloniangall.css
@@ -148,7 +148,7 @@ html>body>#left-column {
     align-items: center;
     flex-grow: 3;
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 html>body>#left-column>#header {
@@ -341,7 +341,7 @@ converse-root>converse-chats>converse-minimized-chats {
     display: block;
     margin: 10px;
     margin-bottom: 0;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 converse-root>converse-chats>converse-minimized-chats>#minimized-chats {
@@ -932,7 +932,7 @@ converse-root>converse-chats>converse-controlbox>.flyout>.controlbox-panes>.cont
     display: block;
     margin: 0;
     padding: 0;
-    overflow: scroll;
+    overflow: auto;
     list-style: none;
 }
 
@@ -1248,7 +1248,7 @@ converse-root>converse-chats>converse-muc>.flyout>.chat-body>converse-muc-config
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 converse-root>converse-chats>converse-muc>.flyout>.chat-body>converse-muc-config-form>.converse-form {
@@ -1379,7 +1379,7 @@ converse-root>converse-chats>converse-muc>.flyout>.chat-body>converse-muc-chatar
     flex-direction: column-reverse;
     justify-content: space-between;
     height: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 converse-root>converse-chats>converse-chat>.flyout>.chat-body>.chat-content>converse-chat-content>.chat-content__notifications,
@@ -1738,7 +1738,7 @@ converse-root>converse-chats>converse-muc>.flyout>.chat-body>converse-muc-chatar
     gap: 10px;
     height: 100%;
     padding: 0 10px 0 10px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 converse-root>converse-chats>converse-chat>.flyout>.chat-body>.bottom-panel>converse-chat-toolbar>.toolbar-buttons>converse-emoji-dropdown>.dropup>.dropdown-menu>converse-emoji-picker>converse-emoji-picker-content>.emoji-picker__lists>.emoji-lists__container[hidden],
@@ -1879,7 +1879,7 @@ converse-root>converse-chats>converse-muc>.flyout>.chat-body>converse-muc-chatar
     width: fit-content;
     margin: 0;
     padding: 0;
-    overflow: scroll;
+    overflow: auto;
     border: 1px var(--cg-yellow) solid;
     list-style: none;
     text-align: center
@@ -1989,7 +1989,7 @@ converse-root>converse-chats>converse-muc>.flyout>.chat-body>converse-muc-chatar
     justify-content: flex-start;
     align-items: center;
     max-height: 400px;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -2068,7 +2068,7 @@ converse-root>#converse-modals {
     top: 0;
     width: 300px;
     max-height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: var(--cg-grey);
     color: var(--cg-white);
 }
